[Feature] OCP: Open Close Principle

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -29,7 +29,12 @@
     }
    },
    "source": [
-    "# SOLID Workshop"
+    "# SOLID Workshop\n",
+    "- SRE: Single Responsibility Principle\n",
+    "- OCP: Open Close Principle\n",
+    "- LSP:\n",
+    "- ISP:\n",
+    "- DIP:"
    ]
   },
   {
@@ -45,7 +50,7 @@
     "\n",
     "\"Every software compponent should have one and only one responsibility\"\n",
     "\n",
-    "Key objectives:\n",
+    "Key points:\n",
     "- Aim for High Cohesion \n",
     "- Aim for Loose Coupling"
    ]
@@ -304,8 +309,7 @@
     "            query = \"INSERT INTO students (name, age, grade) VALUES (%s, %s, %s)\"\n",
     "            values = (student.name, student.age, student.grade)\n",
     "            cursor.execute(query, values)\n",
-    "            self.__db_connection.commit()\n",
-    "        \n"
+    "            self.__db_connection.commit()"
    ]
   },
   {
@@ -321,9 +325,267 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35da2744",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## OCP: Open Close Principle\n",
+    "\n",
+    "\"Software components should be closed for modification, but open for extension\"\n",
+    "\n",
+    "Key points:\n",
+    "- Ease of adding new features \n",
+    "- Lean to minimal cost of developing and testing software\n",
+    "- **OCP** often requires decoupling, which in turn automatically follows the **SRP**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1cb433a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example: Health Insurance "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd6af615",
+   "id": "bc834b06",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class HealthInsuranceCustomerProfile:\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal health insurance customer\n",
+    "        return True # or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92057a1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InsurancePremiumDiscountCalculator:\n",
+    "    def calculate_discount(self, customer:HealthInsuranceCustomerProfile) -> int:\n",
+    "        if customer.is_loyal:\n",
+    "            return 20\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47540a00",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Problem: What if Health + Vehicle Insurance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c358f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HealthInsuranceCustomerProfile:\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal health insurance customer\n",
+    "        return True # or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a2d031b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class VehicleInsuranceCustomerProfile:\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal vehicle insurance customer\n",
+    "        return True # or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea145d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InsurancePremiumDiscountCalculator:\n",
+    "    def calculate_health_insurance_discount(self, customer:HealthInsuranceCustomerProfile) -> int:\n",
+    "        if customer.is_loyal:\n",
+    "            return 20\n",
+    "        return 0\n",
+    "    \n",
+    "    def calculate_vehicle_insurance_discount(self, customer:VehicleInsuranceCustomerProfile) -> int:\n",
+    "        if customer.is_loyal:\n",
+    "            return 20\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "492c71e6",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Let's refactor the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7816d925",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class CustomerProfile(ABC):\n",
+    "    @abstractmethod\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d69473b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HealthInsuranceCustomerProfile(CustomerProfile):    \n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal health insurance customer\n",
+    "        return True # or False\n",
+    "    \n",
+    "class VehicleInsuranceCustomerProfile(CustomerProfile):\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal vehicle insurance customer\n",
+    "        return True # or False  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c483a358",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InsurancePremiumDiscountCalculator:\n",
+    "    def calculate_discount(self, customer:CustomerProfile) -> int:\n",
+    "        if customer.is_loyal:\n",
+    "            return 20\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f73eb5a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Adding Home Insurance? No Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a639214",
+   "metadata": {},
+   "source": [
+    "No need to modify the existing code base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91caaf29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class CustomerProfile(ABC):\n",
+    "    @abstractmethod\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        pass\n",
+    "    \n",
+    "class HealthInsuranceCustomerProfile(CustomerProfile):    \n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal health insurance customer\n",
+    "        return True # or False\n",
+    "    \n",
+    "class VehicleInsuranceCustomerProfile(CustomerProfile):\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal vehicle insurance customer\n",
+    "        return True # or False  \n",
+    "    \n",
+    "class InsurancePremiumDiscountCalculator:\n",
+    "    def calculate_discount(self, customer:CustomerProfile) -> int:\n",
+    "        if customer.is_loyal:\n",
+    "            return 20\n",
+    "        return 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "feaf8e17",
+   "metadata": {},
+   "source": [
+    "Simply adding a new implementation for CustomerProfile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e1e418f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HomeInsuranceCustomerProfile(CustomerProfile):\n",
+    "    def is_loyal(self) -> bool:\n",
+    "        # some complex business logic to determine \n",
+    "        # a loyal home insurance customer\n",
+    "        return True # or False  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b73385c8",
    "metadata": {},
    "outputs": [],
    "source": []
