[Feature] LSP:Liskov Substitution Principle

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -32,7 +32,7 @@
     "# SOLID Workshop\n",
     "- SRE: Single Responsibility Principle\n",
     "- OCP: Open Close Principle\n",
-    "- LSP:\n",
+    "- LSP: Liskov Substitution Principle\n",
     "- ISP:\n",
     "- DIP:"
    ]
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35da2744",
+   "id": "82cb97e1",
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1cb433a",
+   "id": "6981b329",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc834b06",
+   "id": "39ce76d9",
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "92057a1a",
+   "id": "da3613fb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,8 +388,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "81a49e32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customer_profile = HealthInsuranceCustomerProfile()\n",
+    "calculator = InsurancePremiumDiscountCalculator()\n",
+    "discount = calculator.calculate_discount(customer_profile)\n",
+    "print(f\"The discount: {discount}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "47540a00",
+   "id": "42e7533c",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -402,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19c358f0",
+   "id": "871c11ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +429,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2d031b3",
+   "id": "227daaa7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -430,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea145d8e",
+   "id": "1db7b394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,8 +460,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f55aafe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculator = InsurancePremiumDiscountCalculator()\n",
+    "\n",
+    "health_customer = HealthInsuranceCustomerProfile()\n",
+    "health_discount = calculator.calculate_health_insurance_discount(health_customer)\n",
+    "print(f\"health discount: {health_discount}\")\n",
+    "\n",
+    "vehicle_customer = VehicleInsuranceCustomerProfile()\n",
+    "vehicle_discount = calculator.calculate_vehicle_insurance_discount(vehicle_customer)\n",
+    "print(f\"vehicle discount: {vehicle_discount}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "492c71e6",
+   "id": "02316b7f",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -461,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7816d925",
+   "id": "a58f82d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d69473b4",
+   "id": "afe2c11a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c483a358",
+   "id": "a2f59c10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,8 +539,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f3fc2ee0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculator = InsurancePremiumDiscountCalculator()\n",
+    "\n",
+    "health_customer = HealthInsuranceCustomerProfile()\n",
+    "health_discount = calculator.calculate_discount(health_customer)\n",
+    "print(f\"health discount: {health_discount}\")\n",
+    "\n",
+    "vehicle_customer = VehicleInsuranceCustomerProfile()\n",
+    "vehicle_discount = calculator.calculate_discount(vehicle_customer)\n",
+    "print(f\"vehicle discount: {vehicle_discount}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "4f73eb5a",
+   "id": "5fd8d470",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -521,7 +570,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a639214",
+   "id": "0b6e8c8b",
    "metadata": {},
    "source": [
     "No need to modify the existing code base"
@@ -530,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91caaf29",
+   "id": "5882be96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -561,8 +610,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cf8a76a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calculator = InsurancePremiumDiscountCalculator()\n",
+    "\n",
+    "health_customer = HealthInsuranceCustomerProfile()\n",
+    "health_discount = calculator.calculate_discount(health_customer)\n",
+    "print(f\"health discount: {health_discount}\")\n",
+    "\n",
+    "vehicle_customer = VehicleInsuranceCustomerProfile()\n",
+    "vehicle_discount = calculator.calculate_discount(vehicle_customer)\n",
+    "print(f\"vehicle discount: {vehicle_discount}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "feaf8e17",
+   "id": "1b152563",
    "metadata": {},
    "source": [
     "Simply adding a new implementation for CustomerProfile"
@@ -571,7 +638,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e1e418f",
+   "id": "d571eedf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,10 +652,236 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b73385c8",
+   "id": "87e6cde4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "home_customer = HomeInsuranceCustomerProfile()\n",
+    "home_discount = calculator.calculate_discount(home_customer)\n",
+    "print(f\"home discount: {home_discount}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d07928e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## LSP: Liskov Substitution Principle\n",
+    "\n",
+    "\"Objects should be replaceable with their subtypes without affecting the correctness of ther program\"\n",
+    "\n",
+    "Key points:\n",
+    "- Change the \"Is-A\" way of thinking\n",
+    "- \"If it looks like a duck and quacks like a duck but it needs batteries, you probably have the wrong abstraction\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0cbff924",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example: Don't foce a pinguin to fly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19264d05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Bird(ABC):\n",
+    "    @abstractmethod\n",
+    "    def fly(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e3b3b18",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pigeon(Bird):\n",
+    "    def fly(self):\n",
+    "        print(\"Pigeon style flying\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbbef6a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pigeon = Pigeon()\n",
+    "pigeon.fly()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c94a875a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Pinguin(Bird):\n",
+    "    def fly(self):\n",
+    "        raise TypeError(\"Piguin cannot fly\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "526f518d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pinguin = Pinguin()\n",
+    "pinguin.fly()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5793c515",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example: Breaking the hierarchy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9594f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car:\n",
+    "    def show_cabin_width(self):\n",
+    "        print(\"Showing cabin width\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d7b9c95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RacingCar(Car):\n",
+    "#     def show_cabin_width(self):\n",
+    "#         raise TypeError(\"Racingcar doesn't have cabin\")\n",
+    "    \n",
+    "#     def show_cabin_width(self):\n",
+    "#         self.show_cockpit_width()\n",
+    "        \n",
+    "    def show_cockpit_width(self):\n",
+    "        print(\"Showing cockpit width\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3632710a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cars = []\n",
+    "cars.append(Car())\n",
+    "cars.append(Car())\n",
+    "cars.append(RacingCar())\n",
+    "\n",
+    "for car in cars:\n",
+    "    car.show_cabin_width()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f1fa166",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Let's refactor the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "008e82cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Vehicle(ABC):\n",
+    "    @abstractmethod\n",
+    "    def show_interior_width(self):\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4c6a64e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Car(Vehicle):\n",
+    "    def show_interior_width(self):\n",
+    "        self.show_cabin_width()\n",
+    "    \n",
+    "    def show_cabin_width(self):\n",
+    "        print(\"Showing cabin width\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2912a15e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RacingCar(Vehicle):\n",
+    "    def show_interior_width(self):\n",
+    "        self.show_cockpit_width()\n",
+    "    \n",
+    "    def show_cockpit_width(self):\n",
+    "        print(\"Showing cockpit width\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f03820",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vehicles = []\n",
+    "vehicles.append(Car())\n",
+    "vehicles.append(Car())\n",
+    "vehicles.append(RacingCar())\n",
+    "\n",
+    "for vehicle in vehicles:\n",
+    "    vehicle.show_interior_width()"
+   ]
   }
  ],
  "metadata": {
