[Feature] Tell don't Ask

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -90,10 +90,10 @@
     "    def calculate_perimeter(self):\n",
     "        return self.side * 4\n",
     "    \n",
-    "    def draw(self):\n",
+    "    def draw(self) -> None:\n",
     "        print(\"rendering the square image\")\n",
     "    \n",
-    "    def rotate(self, degree):\n",
+    "    def rotate(self, degree) -> None:\n",
     "        print(f\"rotating the image of the square clockwise to {degree} degree\")\n",
     "        self.draw()"
    ]
@@ -158,10 +158,10 @@
     "    def __init__(self, square:Square):\n",
     "        self.square: Square = square\n",
     "        \n",
-    "    def draw(self):\n",
+    "    def draw(self) -> None:\n",
     "        print(\"rendering the square image\")\n",
     "    \n",
-    "    def rotate(self, degree:int):\n",
+    "    def rotate(self, degree:int) -> None:\n",
     "        print(f\"rotating the image of the square clockwise to {degree} degree\")\n",
     "        self.draw()"
    ]
@@ -211,7 +211,7 @@
     "        self.age:int = age\n",
     "        self.grade:int = grade\n",
     "    \n",
-    "    def save(self):\n",
+    "    def save(self) -> None:\n",
     "        # Connect to MySQL database\n",
     "        connection = mysql.connector.connect(\n",
     "            host=\"localhost\",\n",
@@ -294,17 +294,17 @@
     "        self.__insert_student_data(student)\n",
     "        self.__close_db_connection\n",
     "    \n",
-    "    def __create_db_connection(self):\n",
+    "    def __create_db_connection(self) -> None:\n",
     "        conn = mysql.connector.connect(host=\"localhost\",\n",
     "                                       user=\"your_username\",\n",
     "                                       password=\"your_password\",\n",
     "                                       database=\"your_database\")\n",
     "        self.__db_connection = conn\n",
     "        \n",
-    "    def __close_db_connection(self):\n",
+    "    def __close_db_connection(self) -> None:\n",
     "        self.__db_connection.close()\n",
     "        \n",
-    "    def __insert_student_data(self, student:Student):\n",
+    "    def __insert_student_data(self, student:Student) -> None:\n",
     "        with self.__db_connection.cursor() as cursor:\n",
     "            query = \"INSERT INTO students (name, age, grade) VALUES (%s, %s, %s)\"\n",
     "            values = (student.name, student.age, student.grade)\n",
@@ -702,7 +702,7 @@
     "\n",
     "class Bird(ABC):\n",
     "    @abstractmethod\n",
-    "    def fly(self):\n",
+    "    def fly(self) -> None:\n",
     "        pass"
    ]
   },
@@ -714,7 +714,7 @@
    "outputs": [],
    "source": [
     "class Pigeon(Bird):\n",
-    "    def fly(self):\n",
+    "    def fly(self) -> None:\n",
     "        print(\"Pigeon style flying\")"
    ]
   },
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "class Pinguin(Bird):\n",
-    "    def fly(self):\n",
+    "    def fly(self) -> None:\n",
     "        raise TypeError(\"Piguin cannot fly\")"
    ]
   },
@@ -761,7 +761,7 @@
     }
    },
    "source": [
-    "### Example: Breaking the hierarchy"
+    "### Example 1: Break the hierarchy "
    ]
   },
   {
@@ -772,7 +772,7 @@
    "outputs": [],
    "source": [
     "class Car:\n",
-    "    def show_cabin_width(self):\n",
+    "    def show_cabin_width(self) -> None:\n",
     "        print(\"Showing cabin width\")"
    ]
   },
@@ -784,20 +784,23 @@
    "outputs": [],
    "source": [
     "class RacingCar(Car):\n",
-    "#     def show_cabin_width(self):\n",
+    "#     def show_cabin_width(self) -> None:\n",
+    "#         pass\n",
+    "    \n",
+    "#     def show_cabin_width(self) -> None:\n",
     "#         raise TypeError(\"Racingcar doesn't have cabin\")\n",
     "    \n",
     "#     def show_cabin_width(self):\n",
     "#         self.show_cockpit_width()\n",
     "        \n",
-    "    def show_cockpit_width(self):\n",
+    "    def show_cockpit_width(self) -> None:\n",
     "        print(\"Showing cockpit width\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3632710a",
+   "id": "db3d8a92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -812,20 +815,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f1fa166",
+   "id": "4e03ad6e",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
-    "### Let's refactor the code"
+    "### Let's refactor the code\n",
+    "Solution: Break the hierarchy if it fails the substitution test"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "008e82cf",
+   "id": "93d8449f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,44 +837,44 @@
     "\n",
     "class Vehicle(ABC):\n",
     "    @abstractmethod\n",
-    "    def show_interior_width(self):\n",
+    "    def show_interior_width(self) -> None:\n",
     "        pass"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4c6a64e",
+   "id": "23e2e3d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Car(Vehicle):\n",
-    "    def show_interior_width(self):\n",
+    "    def show_interior_width(self) -> None:\n",
     "        self.show_cabin_width()\n",
     "    \n",
-    "    def show_cabin_width(self):\n",
+    "    def show_cabin_width(self) -> None:\n",
     "        print(\"Showing cabin width\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2912a15e",
+   "id": "8c6bdeb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "class RacingCar(Vehicle):\n",
-    "    def show_interior_width(self):\n",
+    "    def show_interior_width(self) -> None:\n",
     "        self.show_cockpit_width()\n",
     "    \n",
-    "    def show_cockpit_width(self):\n",
+    "    def show_cockpit_width(self) -> None:\n",
     "        print(\"Showing cockpit width\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49f03820",
+   "id": "e21fcdc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -881,6 +885,124 @@
     "\n",
     "for vehicle in vehicles:\n",
     "    vehicle.show_interior_width()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24cfa8ec",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example 2: Tell, Don't Ask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c3048e0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Product:\n",
+    "    def __init__(self):\n",
+    "        self.discount:float = 0.25\n",
+    "            \n",
+    "    def get_discount(self) -> float:\n",
+    "        return self.discount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1145ee33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InHouseProduct(Product):\n",
+    "    def apply_extra_discount(self) -> None:\n",
+    "        self.discount = self.discount * 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fed6298",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = []\n",
+    "products.append(Product())\n",
+    "products.append(Product())\n",
+    "products.append(InHouseProduct())\n",
+    "\n",
+    "for product in products:\n",
+    "    if isinstance(product, InHouseProduct):\n",
+    "        product.apply_extra_discount()\n",
+    "        \n",
+    "    print(f\"Final discount: {product.get_discount()}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "191125ae",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Let's refactor the code\n",
+    "Solution: Tell, Don't Ask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b20d100",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Product:\n",
+    "    def __init__(self):\n",
+    "        self.discount:float = 0.25\n",
+    "            \n",
+    "    def get_discount(self) -> float:\n",
+    "        return self.discount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "407af859",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class InHouseProduct(Product):\n",
+    "    def get_discount(self) -> float:\n",
+    "        self.apply_extra_discount()\n",
+    "        return self.discount\n",
+    "    \n",
+    "    def apply_extra_discount(self) -> None:\n",
+    "        self.discount = self.discount * 1.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3209f32a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products = []\n",
+    "products.append(Product())\n",
+    "products.append(Product())\n",
+    "products.append(InHouseProduct())\n",
+    "\n",
+    "for product in products:       \n",
+    "    print(f\"Final discount: {product.get_discount()}\")"
    ]
   }
  ],
