[Feature] ISP: Interface Segregation Principle

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -33,7 +33,7 @@
     "- SRE: Single Responsibility Principle\n",
     "- OCP: Open Close Principle\n",
     "- LSP: Liskov Substitution Principle\n",
-    "- ISP:\n",
+    "- ISP: Interface Segregation Principle\n",
     "- DIP:"
    ]
   },
@@ -698,12 +698,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from abc import ABC, abstractmethod\n",
-    "\n",
-    "class Bird(ABC):\n",
-    "    @abstractmethod\n",
+    "class Bird:\n",
     "    def fly(self) -> None:\n",
-    "        pass"
+    "        print(\"Generic bird flying\")"
    ]
   },
   {
@@ -737,8 +734,10 @@
    "outputs": [],
    "source": [
     "class Pinguin(Bird):\n",
-    "    def fly(self) -> None:\n",
-    "        raise TypeError(\"Piguin cannot fly\")"
+    "    pass \n",
+    "\n",
+    "#     def fly(self) -> None:\n",
+    "#         raise TypeError(\"Piguin cannot fly\")"
    ]
   },
   {
@@ -1004,6 +1003,235 @@
     "for product in products:       \n",
     "    print(f\"Final discount: {product.get_discount()}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccb89bf3",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## ISP: Interface Segregation Principle\n",
+    "\n",
+    "\"No client should be forced to depend on methods it does not use\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bbf9eafa",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example: Multi Function Printer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "893b2c59",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class MultiFunctionPrinter(ABC):\n",
+    "    @abstractmethod\n",
+    "    def do_print(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def do_scan(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def do_fax(self) -> None:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9411920e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class XeroxWorkCentre(MultiFunctionPrinter):\n",
+    "    def do_print(self) -> None:\n",
+    "        print(\"Xerox printing\")\n",
+    "    \n",
+    "    def do_scan(self) -> None:\n",
+    "        print(\"Xerox scanning\")\n",
+    "    \n",
+    "    def do_fax(self) -> None:\n",
+    "        print(\"Xerox faxing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0353a8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xerox = XeroxWorkCentre()\n",
+    "xerox.do_print()\n",
+    "xerox.do_scan()\n",
+    "xerox.do_fax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4db94d89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HPPrintNScan(MultiFunctionPrinter):\n",
+    "    def do_print(self) -> None:\n",
+    "        print(\"HP printing\")\n",
+    "    \n",
+    "    def do_scan(self) -> None:\n",
+    "        print(\"HP scanning\")\n",
+    "    \n",
+    "    def do_fax(self) -> None:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "907cdb02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hp = HPPrintNScan()\n",
+    "hp.do_print()\n",
+    "hp.do_scan()\n",
+    "hp.do_fax()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3ecf358",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Let's refactor the code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da39a898",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Printer(ABC):\n",
+    "    @abstractmethod\n",
+    "    def do_print(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "class Scanner(ABC):\n",
+    "    @abstractmethod\n",
+    "    def do_scan(self) -> None:\n",
+    "        pass\n",
+    "    \n",
+    "class Faxer(ABC):\n",
+    "    @abstractmethod\n",
+    "    def do_fax(self) -> None:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50cc75e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class XeroxWorkCentre(Printer, Scanner, Faxer):\n",
+    "    def do_print(self) -> None:\n",
+    "        print(\"Xerox printing\")\n",
+    "    \n",
+    "    def do_scan(self) -> None:\n",
+    "        print(\"Xerox scanning\")\n",
+    "    \n",
+    "    def do_fax(self) -> None:\n",
+    "        print(\"Xerox faxing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0df0bdce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class HPPrintNScan(Printer, Scanner):\n",
+    "    def do_print(self) -> None:\n",
+    "        print(\"HP printing\")\n",
+    "    \n",
+    "    def do_scan(self) -> None:\n",
+    "        print(\"HP scanning\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fb0e6b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CanonBasicPrinter(Printer):\n",
+    "    def do_print(self) -> None:\n",
+    "        print(\"HP printing\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed418486",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xerox = XeroxWorkCentre()\n",
+    "hp = HPPrintNScan()\n",
+    "canon = CanonBasicPrinter()\n",
+    "\n",
+    "printers = [xerox, hp, canon]\n",
+    "for printer in printers:\n",
+    "    printer.do_print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b71692a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scanners = [xerox, hp]\n",
+    "for scanner  in scanners:\n",
+    "    scanner.do_scan()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65504c01",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
