[Feature] DIP: Dependency Inversion Principle

--- a/SOLID Workshop.ipynb
+++ b/SOLID Workshop.ipynb
@@ -1015,7 +1015,12 @@
    "source": [
     "## ISP: Interface Segregation Principle\n",
     "\n",
-    "\"No client should be forced to depend on methods it does not use\""
+    "\"No client should be forced to depend on methods it does not use\"\n",
+    "\n",
+    "Key points:\n",
+    "- Fat interfaces\n",
+    "- Interfaces with low cohesion\n",
+    "- Empty method implementation"
    ]
   },
   {
@@ -1117,7 +1122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3ecf358",
+   "id": "60a1f5e4",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1130,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da39a898",
+   "id": "548d0e79",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1155,7 +1160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50cc75e4",
+   "id": "4175956b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1173,7 +1178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0df0bdce",
+   "id": "7582be90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1188,7 +1193,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb0e6b5a",
+   "id": "c41b6e68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1200,7 +1205,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ed418486",
+   "id": "a0b01208",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1216,7 +1221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b71692a2",
+   "id": "cf781f33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1226,10 +1231,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f5c4f38a",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## DIP: Dependency Inversion Principle\n",
+    "\n",
+    "- \"High-level modules should not depend on lolw-level modules. Both should depend on abstractions\"\n",
+    "- \"Abstractions should not depend on details. Details should depend on abstractions\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d540ffc",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Example: Product Catalog"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65504c01",
+   "id": "2071a237",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProductCatalog:\n",
+    "    def show_all_products(self):\n",
+    "        product_repo = SQLProductRepository()\n",
+    "        product_list = product_repo.get_all_product_names()\n",
+    "        print(f\"List of all products: {product_list}\")\n",
+    "\n",
+    "\n",
+    "class SQLProductRepository:\n",
+    "    def get_all_product_names(self) -> list[str]:\n",
+    "        return [\"soap\", \"tooth-paste\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1645b484",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "catalog = ProductCatalog()\n",
+    "catalog.show_all_products()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2293ec7",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Let's refactor the code\n",
+    "\"High-level modules should not depend on lolw-level modules. Both should depend on abstractions\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "939b1c2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class ProductRepository(ABC):\n",
+    "    @abstractmethod\n",
+    "    def get_all_product_names(self) -> list[str]:\n",
+    "        pass\n",
+    "    \n",
+    "class ProductFactory:\n",
+    "    def create() -> ProductRepository:\n",
+    "        return SQLProductRepository()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "071313cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ProductCatalog:\n",
+    "    def show_all_products(self):\n",
+    "        product_repo = ProductFactory.create()\n",
+    "        product_list = product_repo.get_all_product_names()\n",
+    "        print(f\"List of all products: {product_list}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3248a42a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class SQLProductRepository(ProductRepository):\n",
+    "    def get_all_product_names(self) -> list[str]:\n",
+    "        return [\"soap\", \"tooth-paste\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "5020a027",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of all products: ['soap', 'tooth-paste']\n"
+     ]
+    }
+   ],
+   "source": [
+    "catalog = ProductCatalog()\n",
+    "catalog.show_all_products()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3890ac7e",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": []
   }
